Fixed responsive wrapping issue on header data

--- a/src/components/PageHeader.scss
+++ b/src/components/PageHeader.scss
@@ -27,7 +27,7 @@
   }
 
   @media only screen and (max-width: $screen-sm-max) {
-    .header-data span {
+    .header-data-item {
       display: block;
     }
   }
